Added title and calculator container

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
         <title>Calculator</title>
     </head>
     <body>
-        
+        <div class="project-name">Calculator</div>
+        <div class="calculator-container">
+            
+        </div>
     </body>
 </html>
