Completed UI for calculator

--- a/index.html
+++ b/index.html
@@ -10,7 +10,30 @@
     <body>
         <div class="project-name">Calculator</div>
         <div class="calculator-container">
-            
+            <div class="display-container">
+                <div class="number-on-screen">0</div>
+            </div>
+            <div class="number-pad-container">
+                <button class="clickable-button darkgrey">AC</button>
+                <button class="clickable-button darkgrey">+/-</button>
+                <button class="clickable-button darkgrey">%</button>
+                <button class="clickable-button orange">÷</button>
+                <button class="clickable-button lightgrey">7</button>
+                <button class="clickable-button lightgrey">8</button>
+                <button class="clickable-button lightgrey">9</button>
+                <button class="clickable-button orange">x</button>
+                <button class="clickable-button lightgrey">4</button>
+                <button class="clickable-button lightgrey">5</button>
+                <button class="clickable-button lightgrey">6</button>
+                <button class="clickable-button orange">-</button>
+                <button class="clickable-button lightgrey">1</button>
+                <button class="clickable-button lightgrey">2</button>
+                <button class="clickable-button lightgrey">3</button>
+                <button class="clickable-button orange">+</button>
+                <button class="clickable-button lightgrey two-cells">0</button>
+                <button class="clickable-button lightgrey">.</button>
+                <button class="clickable-button orange">=</button>
+            </div>
         </div>
     </body>
 </html>
