Added glow effect when user hovers over a button

--- a/index.html
+++ b/index.html
@@ -35,5 +35,7 @@
                 <button class="clickable-button orange">=</button>
             </div>
         </div>
+        <div class="error-mssg-label"></div>
+        <div class="copyright-label">Copyright © popInNotOut github 2025</div>
     </body>
 </html>
