Changed glow functionality so buttons glow properly when being hovered over on mobile

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="project-name">Calculator</div>
         <div class="calculator-container">
             <div class="display-container">
-                <div class="number-on-screen">0</div>
+                <div class="number-on-screen"></div>
             </div>
             <div class="number-pad-container">
                 <button class="clickable-button darkgrey">AC</button>
@@ -35,7 +35,6 @@
                 <button class="clickable-button orange">=</button>
             </div>
         </div>
-        <div class="error-mssg-label"></div>
         <div class="copyright-label">Copyright © popInNotOut github 2025</div>
     </body>
 </html>
